[gd_scene load_steps=3 format=3 uid="uid://ys4y1aq8npvu"]

[ext_resource type="Script" path="res://scripts/panel_b.gd" id="1_jq1lp"]
[ext_resource type="PackedScene" uid="uid://33pdafjatw6d" path="res://scenes/button.tscn" id="2_e6umd"]

[node name="Node3D" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.248, 0)
script = ExtResource("1_jq1lp")

[node name="Button1" parent="." instance=ExtResource("2_e6umd")]
transform = Transform3D(1.595, 0, 0, 0, 1, 0, 0, 0, 2.426, -0.187, 0, -0.27)

[node name="Button2" parent="." instance=ExtResource("2_e6umd")]
transform = Transform3D(1.595, 0, 0, 0, 1, 0, 0, 0, 2.426, 0.187, 0, -0.27)

[node name="Button3" parent="." instance=ExtResource("2_e6umd")]
transform = Transform3D(1.595, 0, 0, 0, 1, 0, 0, 0, 2.426, -0.187, 0, 0.27)

[node name="Button4" parent="." instance=ExtResource("2_e6umd")]
transform = Transform3D(1.595, 0, 0, 0, 1, 0, 0, 0, 2.426, 0.187, 0, 0.27)
